# tetris

./: CMakeLists.txt  Makefile  README.md  README.txt  main  tetrisSource.c
assets/: gameover.wav:Zone.Identifier
include/: score.h  tetris.h  ui.h  utils.h
src/: main.c  score.c  tetris.c  ui.c  utils.c
